--- a/preprocessing_regression.ipynb
+++ b/preprocessing_regression.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('Data Files/1. ST Academy - Crash course and Regression files/House_Price.csv',header=0)\n"
+    "df=pd.read_csv('House_Price.csv',header=0)\n"
    ]
   },
   {
